# paulytools

./: .cdtproject  .cvsignore  .project  CMakeLists.txt  DartConfig.cmake  README.md
Applications/: CMakeLists.txt
Applications/BrainTracer/: CMakeLists.txt
Applications/BrainTracer/Code/: EventListenerModel.h  FLWidgetActivationManager.h  ShortestPath.h  TracerCurves.h  TracerData.cxx  TracerData.h  TracerMain.cxx  TracerMainWindow.cxx  TracerMainWindow.h  TracerUserInterface.fl  TracerUserInterfaceBase.h  TracerUserInterfaceLogic.cxx  TracerUserInterfaceLogic.h  Trackball.cxx  Trackball.h  VTKMeshShortestDistance.cxx  VTKMeshShortestDistance.h  VTKMeshVoronoiDiagram.cxx  VTKMeshVoronoiDiagram.h
Applications/CMRepTool2d/: CMakeLists.txt  SplineMrep.cpp  SplineMrep.h  array2d.h  core.cpp  dispwin.h  dsltool.cpp  dsltool.h  dslwin.h  ispace.cpp  ispace.h  junkcode.cpp  likehood.cpp  likehood.h  misc.cpp  misc.h  readpgm.cpp  readpgm.h  reg.cpp  reg.h  scripting.cpp  scripting.h  test.cpp  tools.cpp  tools.h  ui.fl  ui.txt  ui2.fl  ui3.fl  uibind.cpp  uibind.h  undo.cpp  undo.h  windows.cpp
Applications/CMRepTool3d/: CMakeLists.txt
Applications/CMRepTool3d/Code/: Danielsson.h  DrawFillInside.cpp  DrawFillInside.h  DrawTriangles.cpp  DrawTriangles.h  ImageCubeITK.cxx  ImageCubeITK.h  ImageCubeITK.txx  Readme.txt  align.h  array2d.h  colors.h  curveaxis.cpp  fastmath.h  fracviewer.cpp  fracviewer.h  geodesic.cpp  geodesic.h  glengine.cpp  glengine.h  glui.h  imaging.cpp  imaging.h  imaging.txx  imatch.cpp  imatch.h  implicit.c  implicit.h  main.cpp  matlab.cpp  matlab.h  mspline.cpp  mspline.h  optimization.cpp  optimization.h  optmodes.cpp  smlmath.h  splgeo.cpp  splgeo.h  temp.txt  (+5 more)
Applications/CorpusCallosum/: CMakeLists.txt
Applications/CorpusCallosum/Code/: BSpline5Uni.h  BSplineCubUni.cxx  BSplineCubUni.h  BSplineCubUniTest.cxx  CMRep2D.cxx  CMRep2D.h  CMRep2DFit.cxx  CMRep2DTest.cxx  CMakeLists.txt  DsmOptimization.cxx  EquationSystem.cxx  EquationSystem.h  EquationSystemTest.cxx  FunctionRep.h  ImageCheck.cxx  MedialAtom.cxx  MedialAtom.h  MedialAtomTest.cxx  NewtonMethod.cxx  NewtonMethod.h  NewtonMethodTest.cxx  Optimization.cxx  OptimizationTerms.cxx  OptimizationTerms.h  OptimizationTermsBSpline.cxx  OptimizationTermsBSpline.h  OptimizationTermsTest.cxx  PardisoInterface.cxx  SparseMatrix.cxx  SparseMatrix.h  SparseMatrixTest.cxx  SumBSplineCubUni.cxx  SumBSplineCubUni.h  TemplatedWaveletRep.cxx  TemplatedWaveletRep.h  TemplatedWaveletRepTest.cxx  Wavelet.cxx  Wavelet.h  WaveletRep.cxx  WaveletRep.h  (+2 more)
Applications/FeatureSelection/: CMakeLists.txt  Manual.html
Applications/FeatureSelection/Generic/: AbstractLPClassification.h  CMakeLists.txt  CrossValidation.cpp  CrossValidation.h  FeatureSelection.cpp  FeatureSelection.h  LPWrapper.cpp  LPWrapper.h  LinearSeparation.cpp  LinearSeparation.h  WindowSelection.cpp  WindowSelection.h  globals.cpp  globals.h
Applications/FeatureSelection/MathLink/: CMakeLists.txt  mlmain.cpp  mmtemplate.tm
Applications/FeatureSelection/SoPlexWrapper/: CMakeLists.txt  SoPlexWrapper.cpp  SoPlexWrapper.h
Applications/FeatureSelection/Standalone/: CMakeLists.txt  main.cpp  mathematicaio.cpp  mathematicaio.h
Applications/GraphPartitioning/: CMakeLists.txt
Applications/GraphPartitioning/GraphTools/: BinaryImageLandmarkGraph.cxx  CMakeLists.txt  MeshLandmarkGraph.cxx
Applications/GraphPartitioning/ImageGraphCut/: CMakeLists.txt  ImageGraphCut.cxx  ImageToBoundaryGraph.cxx  ImageToGraphFilter.h  METISTools.cxx  METISTools.h
Applications/GraphPartitioning/METISLink/: CMakeLists.txt  ClutoLink.m  ClutoMMA.cpp  LoadMETIS.nb  MetisMMA.cpp  cluto_template.tm  metis_template.tm
Applications/MedialPDE/: CMakeLists.txt  doxygen.config
Applications/MedialPDE/Code/: AffineTransformDescriptor.h  BasisFunctions2D.cxx  BasisFunctions2D.h  BasisFunctions2D.txx  BranchingSubdivisionSurface.cxx  BranchingSubdivisionSurface.h  BruteForceSubdivisionMedialModel.cxx  BruteForceSubdivisionMedialModel.h  CartesianGridMedialIterationContext.h  CartesianMedialModel.cxx  CartesianMedialModel.h  CoarseToFineMappingDescriptor.h  CodeTimer.h  CoefficientMapping.cxx  CoefficientMapping.h  CoefficientMask.cxx  CoefficientMask.h  DiffeomorphicEnergyTerm.cxx~  DiffeomorphicEnergyTerm.h~  Fit.cxx  GenericMedialModel.h  (+55 more)
Applications/QuickITKApps/: CMakeLists.txt
Applications/QuickVTKApps/: CMakeLists.txt
CoreLibraries/: CMakeLists.txt  mylibs.h
CoreLibraries/BSpline/: BSplineCurve.h  BSplineCurve.txx  BSplineCurveTest.cxx  CMakeLists.txt
CoreLibraries/BasicImaging/: BinaryHeap.cxx  BinaryHeap.h  CMakeLists.txt  Danielsson.cpp  Danielsson.h  DrawTriangles.cpp  ShortestPath.cxx  ShortestPath.h
CoreLibraries/FLTKViewers/: CMakeLists.txt  Graph2DWindow.h  SketchWindow.h  dslui.fl  g2DUI.cpp  g2DUI.fl  g2DUI.h  graph2d.cpp  graph2d.h  sketch.cpp  sketch.h  sketchui.cpp  sketchui.fl  sketchui.h
CoreLibraries/ITKExtensions/: CMakeLists.txt  itkGaussianInterpolateImageFunction.h
CoreLibraries/MReps2d/: CMakeLists.txt  SMLVec4f.h  bspline.cpp  bspline.h  cboundariness.cpp  cboundariness.h  crep2d.cpp  crep2d.h  interp2D.cpp  interp2D.h  mreps2D.cpp  mreps2D.h  phquintic.cpp  phquintic.h  phspline.cpp  phspline.h
CoreLibraries/Matrix/: CMakeLists.txt  matrix.cpp  matrix.h  vector2d.h  vector3d.h
CoreLibraries/Optima/: BrentLinearMethod.cpp  BrentLinearMethod.h  CMakeLists.txt  ConjugateGradientMethod.cpp  ConjugateGradientMethod.h  EvolutionaryStrategy.cpp  EvolutionaryStrategy.h  Powell.cpp  Powell.h  SimplexMethod.cpp  SimplexMethod.h  optima.cpp  optima.h  problems.cpp  problems.h  support.cpp  support.h
CoreLibraries/Registry/: CMakeLists.txt  CommandLineArgumentParser.cxx  CommandLineArgumentParser.h  Registry.cxx  registry.cpp  registry_old.cpp  registry_old.h
ExternalLibraries/: CMakeLists.txt
ExternalLibraries/FLTKExtras/: CMakeLists.txt  Config.cmake.in
ExternalLibraries/LASPack/: CMakeLists.txt  LASPACK_Config.cmake.in
ExternalLibraries/SoPlex/: CMakeLists.txt  Config.cmake.in
ExternalLibraries/tetgen1.4.2/: CMakeLists.txt
(+497 files in other folders)
