PROJECT(FSELECT)

# Find MyLibs (for matrix code)
FIND_PATH(MYLIBS_BINARY_PATH Config.cmake)
IF(MYLIBS_BINARY_PATH) 
    INCLUDE(${MYLIBS_BINARY_PATH}/Config.cmake)
    INCLUDE_DIRECTORIES(${MYLIBS_INCLUDE_DIRS})
    LINK_DIRECTORIES(${MYLIBS_LIBRARY_DIRS})
ENDIF(MYLIBS_BINARY_PATH)

# Find SoPlex
FIND_PATH(SOPLEX_BINARY_PATH Config.cmake)
IF(SOPLEX_BINARY_PATH) 
    INCLUDE(${SOPLEX_BINARY_PATH}/Config.cmake)
    INCLUDE_DIRECTORIES(${SOPLEX_INCLUDE_DIR})
    LINK_DIRECTORIES(${SOPLEX_LIBRARY_DIR})
ENDIF(SOPLEX_BINARY_PATH)

INCLUDE_DIRECTORIES(${FSELECT_SOURCE_DIR}/Generic)
INCLUDE_DIRECTORIES(${FSELECT_SOURCE_DIR}/SoPlexWrapper)
INCLUDE_DIRECTORIES(${FSELECT_SOURCE_DIR}/Standalone)

SUBDIRS(Generic SoPlexWrapper Standalone)

# Check if user wants to compile mathematica code
OPTION(USE_MATHEMATICA "Enable if you want to build MathLink interface for Mathematica")
IF(USE_MATHEMATICA)
    INCLUDE_DIRECTORIES(${FSELECT_SOURCE_DIR}/MathLink)    
    SUBDIRS(MathLink)
ENDIF(USE_MATHEMATICA)


